# Brightvista

./: README.md  REFACTORING-REVIEW.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  brightvista.db  pyproject.toml  test.db
backend/app/: config.py  database.py  main.py  seed.py
backend/app/ai/: approval_predictor.py  clinical_nlp.py  narrative_generator.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  analytics.py  appeals.py  auth.py  cases.py  monitoring.py  patients.py  payers.py  submissions.py  websocket.py
backend/app/core/: events.py  exceptions.py  middleware.py  security.py
backend/app/models/: appeal.py  case.py  document.py  outcome.py  patient.py  payer.py  payer_rule.py  procedure.py  submission.py  user.py  voice_call.py
backend/app/schemas/: analytics.py  auth.py  case.py  common.py  patient.py  payer.py  procedure.py  submission.py
backend/app/services/: appeal_generator.py  approval_calculator.py  chat_agent.py  status_monitor.py  step_deriver.py  submission_router.py
backend/brightvista_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
docs/: architecture-pa-engine.md  project-overview.md
src/app/: App.tsx
src/hooks/: use-api.ts
src/imports/: Background-8-259.tsx  Background.tsx  Container-8-5266.tsx  Container.tsx  Dashboard.tsx  IconList.tsx  svg-i9gm2ia5bk.ts  svg-ijs9ltqavk.ts  svg-wmp8kfiaqf.ts  svg-xgkxy.tsx
src/mock/: agent-mode-flow.ts  call-center.ts  coordinator.ts  dashboard.ts  index.ts  (+2 more)
(+108 files in other folders)
